# baseofdata

./: .gitignore  Makefile  README.md  pyproject.toml
src/baseofdata/: __init__.py
tests/: main.py  stress.py
