[project]
name = "baseofdata"
version = "0.0.3"
description = "Lightweight database system"
readme = "README.md"
license = {text = "GPL-3.0"}
maintainers = [{name = "Çağan Mert İŞLEK", email = "islekcaganmert@gmail.com"}]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Donate = "https://www.buymeacoffee.com/islekcaganmert"
Documentation = "https://github.com/islekcaganmert/baseofdata/wiki"
Changes = "https://github.com/islekcaganmert/baseofdata/commits/main"
"Source Code" = "https://github.com/islekcaganmert/baseofdata"
"Issue Tracker" = "https://github.com/islekcaganmert/baseofdata/issues"
Chat = "https://hereus.pythonanywhere.com/communities/baseofdata"

[build-system]
requires = ["setuptools","wheel"]
build-backend = "setuptools.build_meta"